--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="https://www.linkedin.com/in/luis-tepezano/">Perfil de linkedin</a></p>
           <p><i class="fa fa-suitcase fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="CVLuisTepezano.pdf">Mira mi CV en PDF</a></p>
+          <p><i class="fa fa-asterisk fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="">Mira mi video CV</a></p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>luis_tpzn@hotmail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>6311346104</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
